# Couchbase_Hack_25

./: .gitignore  README.md
BS_CHATBOT/: .env.example  README.md  backend.py  frontend.py
backend/: .env.example  .gitignore  Dockerfile  README.md  api_server.py  client.py  docker-compose.yaml  infer.py  pyproject.toml  query.py  requirements.client.txt  requirements.txt  setup.py
backend/api/: .dockerignore  .env.example  Dockerfile  README.md  analyze_repo.py  api_server.py  api_test.py  docker-compose.prod.yml  infer.py  query.py  requirements.prod.txt
backend/api/developer/: __init__.py  main.py
backend/api/developer/smol_dev/: __init__.py  main.py  prompts.py
backend/smartpylogger/: README.md  __init__.py  client.py  logger.py  utils.py
backend/smartpylogger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/smartpylogger/validators/: bad_words  build.sh  contains.go  contains_linux  contains_mac  ip_validator_linux  ip_validator_mac
backend/smartpylogger/validators/validate_content/: bad_words  validate_content.go
backend/smartpylogger/validators/validate_ip/: validate_ip.go
backend/tests/: api_test.py  cmnd_go_test.md  localdb_test.ipynb  test1.py  test_catch.py  test_send.py
dashboard/: .env.example  .gitignore  CREDIT_SYSTEM_SETUP.md  Dockerfile  POLAR_SETUP_GUIDE.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(landing)/: layout.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/components/about/: about-header.tsx  about.tsx  full-story.tsx  index.ts  project-summary.tsx  story-section.tsx
dashboard/components/ai-analysis/: ai-analysis-with-repo.tsx  ai-analysis.tsx  analysis-controls.tsx  analysis-header.tsx  analysis-result.tsx  credit-purchase-modal.tsx  index.ts
dashboard/components/app-page/: ai-analysis.tsx  app-page.tsx  index.ts
dashboard/components/auth/: auth-layout.tsx  index.ts  login-form.tsx  otp-form.tsx
dashboard/components/chat/: chat.tsx
dashboard/components/credits/: credit-purchase.tsx  index.ts  purchase-credits-button.tsx
dashboard/components/dashboard/: api-key-section.tsx  credit-overview.tsx  credit-usage.tsx  dashboard-layout.tsx  dashboard.tsx  index.ts
dashboard/components/docs/: docs.tsx  index.ts
dashboard/content/: docs.md  story.md
dashboard/hooks/: use-github-stars.ts
dashboard/lib/: auth-client.ts  auth.ts  markdown.ts  send-mail.ts
dashboard/prisma/: schema.prisma  seed.ts
dashboard/services/: app-session-service.ts  credit-service.ts  user-service.ts
dashboard/types/: request.ts
dashboard/validate/: auth.ts
(+64 files in other folders)
