[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpylogger"
version = "0.1.0"
description = "Client for API logging with authentication"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "couchbase>=4.4.0",
    "psycopg2>=2.9.10",
    "openai>=1.91.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
couchbase-middleware = "couchbase_middleware.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["couchbase_middleware*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 
